# masters-thesis

./: README.md
src/: README
src/.kdev4/: src.kdev4
src/harsh/keypoint/: CMakeLists.txt  package.xml
src/harsh/test/: CMakeLists.txt  package.xml  readme.txt
src/harsh/test/src/: listener.cpp
src/harsh/test2/: CMakeLists.txt  package.xml
src/harsh/test2/src/: image_converter.cpp  klttracker.cpp
src/image_pipeline/camera_calibration/nodes/: cameracalibrator.py  cameracheck.py
src/image_pipeline/camera_calibration/src/camera_calibration/: calibrator.py
src/image_pipeline/image_view/: CMakeLists.txt
src/image_pipeline/image_view/src/nodelets/: image_nodelet.cpp
src/image_pipeline/image_view/src/nodes/: image_saver.cpp  stereo_view.cpp
src/image_pipeline/stereo_image_proc/launch/: stereo_image_proc.launch
src/leap_client/: CMakeLists.txt
src/leap_client/include/: .kdev_include_paths  LeapROSListener.h
src/leap_client/msg/: BoneInfo.msg  FingerInfo.msg
src/leap_client/src/: .kdev_include_paths  LeapROSListener.cpp
src/mtools/: README.md
src/mtools/mtools/: README.md
src/mtools/mtools_data_backup/: CMakeLists.txt  package.xml
src/mtools/mtools_data_backup/include/mtools_data_backup/: Container.h  Container_impl.h  Container_impl_eigen_vector.h  Container_impl_std_vector.h
src/mtools/mtools_high_level/: CMakeLists.txt
src/mtools/mtools_high_level/launch/: find_bracket_replay.launch  find_bracket_replay.rviz  kuka_cart_imp_replay.launch  kuka_cart_imp_replay.rviz
src/mtools/mtools_high_level/src/: find_bracket.cpp  find_bracket_replay.cpp  kuka_cart_imp_replay.cpp
src/mtools/mtools_maths/: CMakeLists.txt
src/mtools/mtools_maths/include/mtools_maths/: HomogeneousTransforms.h  Rotations.h  mtools_maths.h
src/mtools/mtools_trajectory/: CMakeLists.txt
src/mtools/mtools_trajectory/include/mtools_trajectory/: CartTrajViaPoints.h  JointTrajViaPoints.h
src/mtools/mtools_trajectory/src/: CartTrajViaPoints.cpp  JointTrajViaPoints.cpp
src/mtools/mtools_trajectory/test/: CartTrajViaPoints_test.cpp  CartTrajViaPoints_test.m  CartTrajViaPoints_test_q.m  CartTrajViaPoints_test_qd.m  CartTrajViaPoints_test_qdd.m  JointTrajViaPoints_test.cpp  JointTrajViaPoints_test_q.m  JointTrajViaPoints_test_qd.m  JointTrajViaPoints_test_qdd.m
src/netft/: .travis.yml  CMakeLists.txt  package.xml
src/netft/launch/: netft.launch  record_data_node.launch
src/netft/src/: netft_node.cpp  record_data_node.cpp
src/schunk_svh/: CMakeLists.txt  new
src/schunk_svh/description/urdf/: svh-arm.urdf.xacro  svh-standalone.urdf.xacro
src/schunk_svh/etc/: svh.yaml
src/schunk_svh/icmaker/CMakeModules/: FindNPP.cmake
src/schunk_svh/launch/: contact_poses_node.launch
src/schunk_svh/src/: SVHNode.cpp  SVHSinTest.cpp  contact_poses_node.cpp
src/schunk_svh/src/driver_svh/src/driver_svh/: .kdev_include_paths  SVHFingerManager.cpp  Untitled Document
src/schunk_svh/src/icl_core/ide/vc8/: common_icl_core.vsprops  icl_core.sln  icl_core.vcproj  icl_core.vsprops  icl_core_config.vcproj  icl_core_config.vsprops  icl_core_logging.vcproj  icl_core_logging.vsprops  icl_core_thread.vcproj  icl_core_thread.vsprops  test_icl_core_config.vcproj  test_icl_core_logging.vcproj  ts_icl_core.vcproj  ts_icl_core_thread.vcproj
src/schunk_svh/src/rqt_svh_reset_gui/: svh_reset_gui.py
src/schunk_svh/src/tinyxml/ide/vc8/: common_tinyxml.vsprops  tinyxml.vcproj  tinyxml.vsprops
src/svh_control/: CMakeLists.txt
src/svh_control/launch/: svh_control.launch
src/svh_control/src/: .kdev_include_paths  Leap_motion_bridge.cpp  filter.cpp
src/svh_test/: CMakeLists.txt
src/svh_test/launch/: test.launch
src/svh_test/src/: test_svh.cpp
src/ueye_cam/: CMakeLists.txt  README
src/ueye_cam/cfg/: UEyeCam.cfg
src/ueye_cam/external_prog/extrinsic_calibration/: CMakeLists.txt  Makefile  back0000.pgm  extrinsic_calibration  front0000.pgm  stereo_left_back.yaml  stereo_left_front.yaml  temp.yaml
src/ueye_cam/external_prog/extrinsic_calibration/src/: extrinsic_calibration.cpp
src/ueye_cam/external_prog/intrinsic-koreki/: Makefile  readme.txt
src/ueye_cam/external_prog/intrinsic-koreki/data/: mire.cfg
src/ueye_cam/external_prog/intrinsic-koreki/data/extrinsic/: extrinsics-camera_1-camera_2.xml
src/ueye_cam/external_prog/intrinsic-koreki/data/extrinsic/Nouveau dossier/: extrinsics-camLeft-camRight.xml  extrinsics-camera_1-camera_22.xml  extrinsics-fishLeft-fishRight.xml
src/ueye_cam/external_prog/intrinsic-koreki/data/intrinsic/: camera_1_calib.xml  camera_2_calib.xml
src/ueye_cam/external_prog/intrinsic-koreki/data/intrinsic/Nouveau dossier/: camLeft_calib.xml  camRight_calib.xml  camera_0_calib.xml  camera_0_calib.yaml  camera_1_calib.xml  camera_2_calib2.xml  fishLeft_calib.xml  fishRight_calib.xml  i2.xml  i3.xml
src/ueye_cam/external_prog/intrinsic-koreki/include/: Chessboard.h  ChessboardCorner.h  ChessboardQuad.h  calibrage.h
src/ueye_cam/external_prog/intrinsic-koreki/src/: Chessboard.cpp  calibrage.cpp  calibrageStereo.cpp  common.cpp  main.cpp  mainStereo.cpp
src/ueye_cam/image_record/: README
src/ueye_cam/image_record/calibrationdata/: ost.txt
src/ueye_cam/include/ueye_cam/: ueye_cam_nodelet.hpp
src/ueye_cam/launch/: extrinsic_multi_stereo.launch  mono.launch  mono_auto_tracking.launch  multi_stereo.launch  multicam.launch  setting.launch  stereo_back.launch  stereo_front.launch
src/ueye_cam/param/camera_conf/: UI524xCP-M_conf.ini  camera1.ini  camera2.ini  camera3.ini  camera4.ini  camera5.ini  camera6.ini  camera7.ini  camera8.ini
src/ueye_cam/param/camera_info/: camera1.xml  camera2.yaml  extrinsic_stereo_back.yaml  ost.txt  stereo_left_back.yaml  stereo_left_front.yaml  stereo_right_back.yaml  stereo_right_front.yaml  test.yml
src/ueye_cam/rviz/: 8cam.rviz
src/ueye_cam/src/: .kdev_include_paths  ueye_cam_nodelet.cpp
