<?xml version="1.0"?>
<package>
  <name>mtools_data_backup</name>
  <version>0.0.0</version>
  <description>Tools for backup in desired format.</description>

  <maintainer email="sylvain.vandernotte@irt-jules-verne.fr">Sylvain Vandernotte</maintainer>

  <license>Distrubution under autorisation from IRT Jules Verne</license>

  <url type="repository">https://gitlab.irt-jules-verne.fr/svandernotte/mtools</url>

  <author email="sylvain.vandernotte@irt-jules-verne.fr">Sylvain Vandernotte</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
